# ipkobo

./: CMakeLists.txt  README.md  pyproject.toml  setup.cfg
files/: WindowDef.xml  WindowDef.yaml  a.yaml
ipbox/: app.py  guiComponents.py  model.py  test.py  view.py
ipcat/: __init__.py  analysis.py  app.py  callbacks.py  common.py  control.py  gui.py  guiComponents.py  handlers.py  io.py  model.py  test.py  vcontrol.py  view.py  vmodel.py
ipcat/analysis/: __init__.py  base.py  simpleAnalysis.py  store.py
ipcat/model/: __init__.py  data.py
ipcat/view/: gui.py  guiComponents.py  view.py
ipfield/: app.py  gui.py  model.py  view.py
ipkobo/analysis/: __init__.py  base.py  blurAnalysis.py  edgeAnalysis.py  simpleAnalysis.py  store.py  tools.py
ipkobo/app/: app.py
ipkobo/model/: __init__.py  config.py  data.py
ipkobo/model/analysis/: __init__.py  base.py  edgeAnalysis.py  pcbAnalysis.py  simpleAnalysis.py  store.py
ipkobo/store/: __init__.py  stores.py
ipkobo/view/: guiComponents.py  view.py
iplab/: vmodel.py
iplab/app/: app.py
iplab/model/: data.py
iplab/view/: __init__.py  gui.py  guiComponents.py  view.py
ipsquare/: __init__.py  analysis.py  control.py  gui.py  model.py  vmodel.py
python/: ipapp.py
python/ipcat/: __init__.py  analysis.py  app.py  common.py  control.py  gui.py  guiComponents.py  guiControl.py  handlers.py  model.py  test.py  vcontrol.py  view.py  vmodel.py
scripts/: displayImage.py  ipapp.py  ipkobo.py  ipkrun.py  ipsquare.py
src/ipkobo/analysis/: __init__.py  base.py  contourAnalysis.py  edgeAnalysis.py  simpleAnalysis.py  store.py
src/ipkobo/app/: CommandProcessor.py  __init__.py  app.py
src/ipkobo/cli/: displayImage.py  ipkrun.py  overlayShape.py  processColor.py  thresholdImage.py
src/ipkobo/model/: data.py  io.py
src/ipkobo/view/: callbacks.py  gui.py  view.py
