[metadata]
name    = ipcat
version = 0.0.0
author  = Takanori Kono
description = Image processing testing

[options]
python_requires = >=3.7
install_requires =
  pyyaml
package_dir =
  =.
packages = find:
scripts = scripts/ipcatrun.py

#[options.extra_require]
#
#[options.entry_points]
#entry_points =

